testfx/errors/error_tests/edge_23_type_keywords.fx
// 其他语言的类型关键字
int x = 10
float y = 3.14
double z = 2.718
string name = "John"
boolean flag = true
void doSomething() {
    println("void function")
}
